modules/gdscript/tests/scripts/runtime/errors/op_by_zero/modulo_by_zero_vector2i.gd
func test():
	var vec2i = Vector2i(1, 1)
	vec2i %= Vector2i(0, 0)
